--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,6 +77,9 @@ jobs:
             unzip ~/.gorse/download/frappe.zip -d ~/.gorse/dataset
             unzip ~/.gorse/download/ml-tag.zip -d ~/.gorse/dataset
             unzip ~/.gorse/download/criteo.zip -d ~/.gorse/dataset
+      - run:
+          name: Install Go
+          command: brew install go
       - restore_cache:
           keys:
             - go-mod-v4-{{ checksum "go.sum" }}
@@ -95,6 +98,23 @@ jobs:
     executor: win/server-2022
     steps:
       - checkout
+      - run:
+          name: Set up dataset
+          command: |
+            mkdir -p ~/.gorse/dataset
+            mkdir -p ~/.gorse/download
+            wget https://cdn.gorse.io/datasets/ml-100k.zip -P ~/.gorse/download
+            wget https://cdn.gorse.io/datasets/ml-1m.zip -P ~/.gorse/download
+            wget https://cdn.gorse.io/datasets/pinterest-20.zip -P ~/.gorse/download
+            wget https://cdn.gorse.io/datasets/frappe.zip -P ~/.gorse/download
+            wget https://cdn.gorse.io/datasets/ml-tag.zip -P ~/.gorse/download
+            wget https://cdn.gorse.io/datasets/criteo.zip -P ~/.gorse/download
+            unzip ~/.gorse/download/ml-100k.zip -d ~/.gorse/dataset
+            unzip ~/.gorse/download/ml-1m.zip -d ~/.gorse/dataset
+            unzip ~/.gorse/download/pinterest-20.zip -d ~/.gorse/dataset
+            unzip ~/.gorse/download/frappe.zip -d ~/.gorse/dataset
+            unzip ~/.gorse/download/ml-tag.zip -d ~/.gorse/dataset
+            unzip ~/.gorse/download/criteo.zip -d ~/.gorse/dataset
       - restore_cache:
           keys:
             - go-mod-v4-{{ checksum "go.sum" }}
