--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,18 +65,18 @@ jobs:
           command: |
             mkdir -p ~/.gorse/dataset
             mkdir -p ~/.gorse/download
-            wget https://cdn.gorse.io/datasets/ml-100k.zip -P ~/.gorse/download
-            wget https://cdn.gorse.io/datasets/ml-1m.zip -P ~/.gorse/download
-            wget https://cdn.gorse.io/datasets/pinterest-20.zip -P ~/.gorse/download
-            wget https://cdn.gorse.io/datasets/frappe.zip -P ~/.gorse/download
-            wget https://cdn.gorse.io/datasets/ml-tag.zip -P ~/.gorse/download
-            wget https://cdn.gorse.io/datasets/criteo.zip -P ~/.gorse/download
-            unzip ~/.gorse/download/ml-100k.zip -d ~/.gorse/dataset
-            unzip ~/.gorse/download/ml-1m.zip -d ~/.gorse/dataset
-            unzip ~/.gorse/download/pinterest-20.zip -d ~/.gorse/dataset
-            unzip ~/.gorse/download/frappe.zip -d ~/.gorse/dataset
-            unzip ~/.gorse/download/ml-tag.zip -d ~/.gorse/dataset
-            unzip ~/.gorse/download/criteo.zip -d ~/.gorse/dataset
+            wget https://cdn.gorse.io/datasets/ml-100k.zip -P $env:USERPROFILE/.gorse/download
+            wget https://cdn.gorse.io/datasets/ml-1m.zip -P $env:USERPROFILE/.gorse/download
+            wget https://cdn.gorse.io/datasets/pinterest-20.zip -P $env:USERPROFILE/.gorse/download
+            wget https://cdn.gorse.io/datasets/frappe.zip -P $env:USERPROFILE/.gorse/download
+            wget https://cdn.gorse.io/datasets/ml-tag.zip -P $env:USERPROFILE/.gorse/download
+            wget https://cdn.gorse.io/datasets/criteo.zip -P $env:USERPROFILE/.gorse/download
+            unzip ~/.gorse/download/ml-100k.zip -d $env:USERPROFILE/.gorse/dataset
+            unzip ~/.gorse/download/ml-1m.zip -d $env:USERPROFILE/.gorse/dataset
+            unzip ~/.gorse/download/pinterest-20.zip -d $env:USERPROFILE/.gorse/dataset
+            unzip ~/.gorse/download/frappe.zip -d $env:USERPROFILE/.gorse/dataset
+            unzip ~/.gorse/download/ml-tag.zip -d $env:USERPROFILE/.gorse/dataset
+            unzip ~/.gorse/download/criteo.zip -d $env:USERPROFILE/.gorse/dataset
       - run:
           name: Install Go
           command: brew install go
