--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
   win: circleci/windows@5.0
 
 jobs:
-  unit-test-amd64:
+  unit-test-arm64:
     machine:
       image: ubuntu-2004:current
     resource_class: arm.large
@@ -65,18 +65,18 @@ jobs:
           command: |
             mkdir -p ~/.gorse/dataset
             mkdir -p ~/.gorse/download
-            wget https://cdn.gorse.io/datasets/ml-100k.zip -P $env:USERPROFILE/.gorse/download
-            wget https://cdn.gorse.io/datasets/ml-1m.zip -P $env:USERPROFILE/.gorse/download
-            wget https://cdn.gorse.io/datasets/pinterest-20.zip -P $env:USERPROFILE/.gorse/download
-            wget https://cdn.gorse.io/datasets/frappe.zip -P $env:USERPROFILE/.gorse/download
-            wget https://cdn.gorse.io/datasets/ml-tag.zip -P $env:USERPROFILE/.gorse/download
-            wget https://cdn.gorse.io/datasets/criteo.zip -P $env:USERPROFILE/.gorse/download
-            unzip ~/.gorse/download/ml-100k.zip -d $env:USERPROFILE/.gorse/dataset
-            unzip ~/.gorse/download/ml-1m.zip -d $env:USERPROFILE/.gorse/dataset
-            unzip ~/.gorse/download/pinterest-20.zip -d $env:USERPROFILE/.gorse/dataset
-            unzip ~/.gorse/download/frappe.zip -d $env:USERPROFILE/.gorse/dataset
-            unzip ~/.gorse/download/ml-tag.zip -d $env:USERPROFILE/.gorse/dataset
-            unzip ~/.gorse/download/criteo.zip -d $env:USERPROFILE/.gorse/dataset
+            wget https://cdn.gorse.io/datasets/ml-100k.zip -P ~/.gorse/download
+            wget https://cdn.gorse.io/datasets/ml-1m.zip -P ~/.gorse/download
+            wget https://cdn.gorse.io/datasets/pinterest-20.zip -P ~/.gorse/download
+            wget https://cdn.gorse.io/datasets/frappe.zip -P ~/.gorse/download
+            wget https://cdn.gorse.io/datasets/ml-tag.zip -P ~/.gorse/download
+            wget https://cdn.gorse.io/datasets/criteo.zip -P ~/.gorse/download
+            unzip ~/.gorse/download/ml-100k.zip -d ~/.gorse/dataset
+            unzip ~/.gorse/download/ml-1m.zip -d ~/.gorse/dataset
+            unzip ~/.gorse/download/pinterest-20.zip -d ~/.gorse/dataset
+            unzip ~/.gorse/download/frappe.zip -d ~/.gorse/dataset
+            unzip ~/.gorse/download/ml-tag.zip -d ~/.gorse/dataset
+            unzip ~/.gorse/download/criteo.zip -d ~/.gorse/dataset
       - run:
           name: Install Go
           command: brew install go
@@ -101,20 +101,20 @@ jobs:
       - run:
           name: Set up dataset
           command: |
-            New-Item -Type Directory -Path ~/.gorse/dataset
-            New-Item -Type Directory -Path ~/.gorse/download
-            Invoke-WebRequest https://cdn.gorse.io/datasets/ml-100k.zip -OutFile ~/.gorse/download
-            Invoke-WebRequest https://cdn.gorse.io/datasets/ml-1m.zip -OutFile ~/.gorse/download
-            Invoke-WebRequest https://cdn.gorse.io/datasets/pinterest-20.zip -OutFile ~/.gorse/download
-            Invoke-WebRequest https://cdn.gorse.io/datasets/frappe.zip -OutFile ~/.gorse/download
-            Invoke-WebRequest https://cdn.gorse.io/datasets/ml-tag.zip -OutFile ~/.gorse/download
-            Invoke-WebRequest https://cdn.gorse.io/datasets/criteo.zip -OutFile ~/.gorse/download
-            Expand-Archive ~/.gorse/download/ml-100k.zip -DestinationPath ~/.gorse/dataset
-            Expand-Archive ~/.gorse/download/ml-1m.zip -DestinationPath ~/.gorse/dataset
-            Expand-Archive ~/.gorse/download/pinterest-20.zip -DestinationPath ~/.gorse/dataset
-            Expand-Archive ~/.gorse/download/frappe.zip -DestinationPath ~/.gorse/dataset
-            Expand-Archive ~/.gorse/download/ml-tag.zip -DestinationPath ~/.gorse/dataset
-            Expand-Archive ~/.gorse/download/criteo.zip -DestinationPath ~/.gorse/dataset
+            New-Item -Type Directory -Path $env:USERPROFILE/.gorse/dataset
+            New-Item -Type Directory -Path $env:USERPROFILE/.gorse/download
+            Invoke-WebRequest https://cdn.gorse.io/datasets/ml-100k.zip -OutFile $env:USERPROFILE/.gorse/download
+            Invoke-WebRequest https://cdn.gorse.io/datasets/ml-1m.zip -OutFile $env:USERPROFILE/.gorse/download
+            Invoke-WebRequest https://cdn.gorse.io/datasets/pinterest-20.zip -OutFile $env:USERPROFILE/.gorse/download
+            Invoke-WebRequest https://cdn.gorse.io/datasets/frappe.zip -OutFile $env:USERPROFILE/.gorse/download
+            Invoke-WebRequest https://cdn.gorse.io/datasets/ml-tag.zip -OutFile $env:USERPROFILE/.gorse/download
+            Invoke-WebRequest https://cdn.gorse.io/datasets/criteo.zip -OutFile $env:USERPROFILE/.gorse/download
+            Expand-Archive $env:USERPROFILE/.gorse/download/ml-100k.zip -DestinationPath $env:USERPROFILE/.gorse/dataset
+            Expand-Archive $env:USERPROFILE/.gorse/download/ml-1m.zip -DestinationPath $env:USERPROFILE/.gorse/dataset
+            Expand-Archive $env:USERPROFILE/.gorse/download/pinterest-20.zip -DestinationPath $env:USERPROFILE/.gorse/dataset
+            Expand-Archive $env:USERPROFILE/.gorse/download/frappe.zip -DestinationPath $env:USERPROFILE/.gorse/dataset
+            Expand-Archive $env:USERPROFILE/.gorse/download/ml-tag.zip -DestinationPath $env:USERPROFILE/.gorse/dataset
+            Expand-Archive $env:USERPROFILE/.gorse/download/criteo.zip -DestinationPath $env:USERPROFILE/.gorse/dataset
       - restore_cache:
           keys:
             - go-mod-v4-{{ checksum "go.sum" }}
@@ -132,6 +132,6 @@ jobs:
 workflows:
   unit-test:
     jobs:
-      - unit-test-amd64
+      - unit-test-arm64
       - unit-test-macos
       - unit-test-windows
