--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,20 +101,20 @@ jobs:
       - run:
           name: Set up dataset
           command: |
-            New-Item -Type Directory -Path $env:USERPROFILE/.gorse/dataset
-            New-Item -Type Directory -Path $env:USERPROFILE/.gorse/download
-            Invoke-WebRequest https://cdn.gorse.io/datasets/ml-100k.zip -OutFile $env:USERPROFILE/.gorse/download
-            Invoke-WebRequest https://cdn.gorse.io/datasets/ml-1m.zip -OutFile $env:USERPROFILE/.gorse/download
-            Invoke-WebRequest https://cdn.gorse.io/datasets/pinterest-20.zip -OutFile $env:USERPROFILE/.gorse/download
-            Invoke-WebRequest https://cdn.gorse.io/datasets/frappe.zip -OutFile $env:USERPROFILE/.gorse/download
-            Invoke-WebRequest https://cdn.gorse.io/datasets/ml-tag.zip -OutFile $env:USERPROFILE/.gorse/download
-            Invoke-WebRequest https://cdn.gorse.io/datasets/criteo.zip -OutFile $env:USERPROFILE/.gorse/download
-            Expand-Archive $env:USERPROFILE/.gorse/download/ml-100k.zip -DestinationPath $env:USERPROFILE/.gorse/dataset
-            Expand-Archive $env:USERPROFILE/.gorse/download/ml-1m.zip -DestinationPath $env:USERPROFILE/.gorse/dataset
-            Expand-Archive $env:USERPROFILE/.gorse/download/pinterest-20.zip -DestinationPath $env:USERPROFILE/.gorse/dataset
-            Expand-Archive $env:USERPROFILE/.gorse/download/frappe.zip -DestinationPath $env:USERPROFILE/.gorse/dataset
-            Expand-Archive $env:USERPROFILE/.gorse/download/ml-tag.zip -DestinationPath $env:USERPROFILE/.gorse/dataset
-            Expand-Archive $env:USERPROFILE/.gorse/download/criteo.zip -DestinationPath $env:USERPROFILE/.gorse/dataset
+            New-Item -Type Directory -Path ~/.gorse/dataset
+            New-Item -Type Directory -Path ~/.gorse/download
+            Invoke-WebRequest https://cdn.gorse.io/datasets/ml-100k.zip -OutFile ~/.gorse/download/ml-100k.zip
+            Invoke-WebRequest https://cdn.gorse.io/datasets/ml-1m.zip -OutFile ~/.gorse/download/ml-1m.zip
+            Invoke-WebRequest https://cdn.gorse.io/datasets/pinterest-20.zip -OutFile ~/.gorse/download/pinterest-20.zip
+            Invoke-WebRequest https://cdn.gorse.io/datasets/frappe.zip -OutFile ~/.gorse/download/frappe.zip
+            Invoke-WebRequest https://cdn.gorse.io/datasets/ml-tag.zip -OutFile ~/.gorse/download/ml-tag.zip
+            Invoke-WebRequest https://cdn.gorse.io/datasets/criteo.zip -OutFile ~/.gorse/download/criteo.zip
+            Expand-Archive ~/.gorse/download/ml-100k.zip -DestinationPath ~/.gorse/dataset
+            Expand-Archive ~/.gorse/download/ml-1m.zip -DestinationPath ~/.gorse/dataset
+            Expand-Archive ~/.gorse/download/pinterest-20.zip -DestinationPath ~/.gorse/dataset
+            Expand-Archive ~/.gorse/download/frappe.zip -DestinationPath ~/.gorse/dataset
+            Expand-Archive ~/.gorse/download/ml-tag.zip -DestinationPath ~/.gorse/dataset
+            Expand-Archive ~/.gorse/download/criteo.zip -DestinationPath ~/.gorse/dataset
       - restore_cache:
           keys:
             - go-mod-v4-{{ checksum "go.sum" }}
