--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,13 @@
 version: 2.1
 
-executors:
-  amd64:
-    machine:
-      image: ubuntu-2004:current
-    resource_class: large
-  arm64:
+orbs:
+  win: circleci/windows@5.0
+
+jobs:
+  unit-test-arm64:
     machine:
       image: ubuntu-2004:current
     resource_class: arm.large
-
-jobs:
-  unit-test:
-    parameters:
-      platform:
-        type: executor
-    executor: << parameters.platform >>
     working_directory: ~/repo
     steps:
       - checkout
@@ -62,10 +54,84 @@ jobs:
           name: Run tests
           command: go test -timeout 20m -v ./...
 
+  unit-test-macos:
+    macos:
+      xcode: 14.2.0
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - run:
+          name: Set up dataset
+          command: |
+            mkdir -p ~/.gorse/dataset
+            mkdir -p ~/.gorse/download
+            wget https://cdn.gorse.io/datasets/ml-100k.zip -P ~/.gorse/download
+            wget https://cdn.gorse.io/datasets/ml-1m.zip -P ~/.gorse/download
+            wget https://cdn.gorse.io/datasets/pinterest-20.zip -P ~/.gorse/download
+            wget https://cdn.gorse.io/datasets/frappe.zip -P ~/.gorse/download
+            wget https://cdn.gorse.io/datasets/ml-tag.zip -P ~/.gorse/download
+            wget https://cdn.gorse.io/datasets/criteo.zip -P ~/.gorse/download
+            unzip ~/.gorse/download/ml-100k.zip -d ~/.gorse/dataset
+            unzip ~/.gorse/download/ml-1m.zip -d ~/.gorse/dataset
+            unzip ~/.gorse/download/pinterest-20.zip -d ~/.gorse/dataset
+            unzip ~/.gorse/download/frappe.zip -d ~/.gorse/dataset
+            unzip ~/.gorse/download/ml-tag.zip -d ~/.gorse/dataset
+            unzip ~/.gorse/download/criteo.zip -d ~/.gorse/dataset
+      - run:
+          name: Install Go
+          command: brew install go
+      - restore_cache:
+          keys:
+            - go-mod-v4-{{ checksum "go.sum" }}
+      - run:
+          name: Install Dependencies
+          command: go mod download
+      - save_cache:
+          key: go-mod-v4-{{ checksum "go.sum" }}
+          paths:
+            - "/go/pkg/mod"
+      - run:
+          name: Run tests
+          command: go test -timeout 20m -v ./... -skip "TestPostgres|TestMySQL|TestMongo|TestRedis"
+
+  unit-test-windows:
+    executor: win/server-2022
+    steps:
+      - checkout
+      - run:
+          name: Set up dataset
+          command: |
+            New-Item -Type Directory -Path ~/.gorse/dataset
+            New-Item -Type Directory -Path ~/.gorse/download
+            Invoke-WebRequest https://cdn.gorse.io/datasets/ml-100k.zip -OutFile ~/.gorse/download/ml-100k.zip
+            Invoke-WebRequest https://cdn.gorse.io/datasets/ml-1m.zip -OutFile ~/.gorse/download/ml-1m.zip
+            Invoke-WebRequest https://cdn.gorse.io/datasets/pinterest-20.zip -OutFile ~/.gorse/download/pinterest-20.zip
+            Invoke-WebRequest https://cdn.gorse.io/datasets/frappe.zip -OutFile ~/.gorse/download/frappe.zip
+            Invoke-WebRequest https://cdn.gorse.io/datasets/ml-tag.zip -OutFile ~/.gorse/download/ml-tag.zip
+            Invoke-WebRequest https://cdn.gorse.io/datasets/criteo.zip -OutFile ~/.gorse/download/criteo.zip
+            Expand-Archive ~/.gorse/download/ml-100k.zip -DestinationPath ~/.gorse/dataset
+            Expand-Archive ~/.gorse/download/ml-1m.zip -DestinationPath ~/.gorse/dataset
+            Expand-Archive ~/.gorse/download/pinterest-20.zip -DestinationPath ~/.gorse/dataset
+            Expand-Archive ~/.gorse/download/frappe.zip -DestinationPath ~/.gorse/dataset
+            Expand-Archive ~/.gorse/download/ml-tag.zip -DestinationPath ~/.gorse/dataset
+            Expand-Archive ~/.gorse/download/criteo.zip -DestinationPath ~/.gorse/dataset
+      - restore_cache:
+          keys:
+            - go-mod-v4-{{ checksum "go.sum" }}
+      - run:
+          name: Install Dependencies
+          command: go mod download
+      - save_cache:
+          key: go-mod-v4-{{ checksum "go.sum" }}
+          paths:
+            - "/go/pkg/mod"
+      - run:
+          name: Run tests
+          command: go test -timeout 20m -v ./... -skip "TestPostgres|TestMySQL|TestMongo|TestRedis"
+
 workflows:
   unit-test:
     jobs:
-      - unit-test:
-          matrix:
-            parameters:
-              platform: [amd64, arm64]
+      - unit-test-arm64
+      - unit-test-macos
+      - unit-test-windows
