--- a/storage/docker-compose.yml
+++ b/storage/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   redis:
-    image: redis/redis-stack
+    image: redis/redis-stack:6.2.6-v9
     ports:
       - 6379:6379
 
