feat: implement DeepFM (#728)

--- a/config/config.toml
+++ b/config/config.toml
@@ -249,3 +249,8 @@ sampler = "always"
 
 # The ratio of ratio based sampler. The default value is 1.
 ratio = 1
+
+[experimental]
+
+# Enable deep learning recommenders. The default value is false.
+enable_deep_learning = false
