feat: support multi-thread inference (#762)

--- a/config/config.toml
+++ b/config/config.toml
@@ -254,3 +254,6 @@ ratio = 1
 
 # Enable deep learning recommenders. The default value is false.
 enable_deep_learning = false
+
+# Batch size for deep learning recommenders. The default value is 128.
+deep_learning_batch_size = 128
