--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
           command: |
             wget https://golang.org/dl/go1.21.0.linux-arm64.tar.gz
             sudo rm -rf /usr/local/go
-            sudo tar -C /usr/local -xzf go1.21.0.linux-amd64.tar.gz
+            sudo tar -C /usr/local -xzf go1.21.0.linux-arm64.tar.gz
       - restore_cache:
           keys:
             - go-mod-v4-{{ checksum "go.sum" }}
