--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,12 @@ jobs:
             unzip ~/.gorse/download/frappe.zip -d ~/.gorse/dataset
             unzip ~/.gorse/download/ml-tag.zip -d ~/.gorse/dataset
             unzip ~/.gorse/download/criteo.zip -d ~/.gorse/dataset
+      - run:
+          name: Upgrade Go
+          command: |
+            wget https://golang.org/dl/go1.21.0.linux-arm64.tar.gz
+            sudo rm -rf /usr/local/go
+            sudo tar -C /usr/local -xzf go1.21.0.linux-arm64.tar.gz
       - restore_cache:
           keys:
             - go-mod-v4-{{ checksum "go.sum" }}
@@ -117,6 +123,9 @@ jobs:
             Expand-Archive ~/.gorse/download/frappe.zip -DestinationPath ~/.gorse/dataset
             Expand-Archive ~/.gorse/download/ml-tag.zip -DestinationPath ~/.gorse/dataset
             Expand-Archive ~/.gorse/download/criteo.zip -DestinationPath ~/.gorse/dataset
+      - run:
+          name: Upgrade Go
+          command: choco upgrade golang -y
       - restore_cache:
           keys:
             - go-mod-v4-{{ checksum "go.sum" }}
