--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@
 # Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
+.idea
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
